   * Fixed locking of input subtitle file (for unknown subtitles) - thx darnn
   * Fixed crash after unsuccessful load of subtitle file - thx darnn
   * Fixed possible crash in "Batch convert" - thx FreezinG117
   * Fixed issue with the German open quotation mark - thx Ninelpienel
   * Fixed bug in "Reverse RTL start/end" - thx darnn
   * Fixed "FCP + image" export in frame rate 29.97 - thx chris
   * Fixed finding Tesseract traineddata files on Linux - thx mooop12
   * Fixed loading of "mks" files from cmd line - thx Charles


3.5.2 (3rd March 2017)
* NEW:
   * Added optional list view columns "chars/sec" + "words/min"
   * New setting for waveform: Set video position when moving start/end
   * Added new json subtitle format - thx Zhiyi
   * Added new binary subtitle format - thx Suzanne
   * Added shortcut "Go to previous line and set video position" - thx Mia
* IMPROVED:
   * Updated Russian translation - thx Elheym
   * Updated Portuguese translation - thx moob
   * Updated Polish translation - thx admas
   * Updated Basque translation - thx Xabier
   * Updated Korean translation - thx domddol
   * Updated Hungarian translation - thx ZityiSoft Team
   * Updated Swedish translation - thx Ted
   * Updated Chinese translation - thx Leon
   * Minor improvements for format "Structured titles" - thx Yamato-ua
   * List view columns arrangable and non-clickable - thx Ingo
   * EBU STL: New settings regarding vertical position
   * EBU STL: New color picker dialog
   * "libmpv" shows version number
   * Added preview text inside video for "libmpv"
   * Added format "PAC" to "Batch convert" - thx Amed
* FIXED:
   * Fixed play current/selection not stopping - thx rhazor
   * Fixed fast forward waveform scrolling with mouse wheel
   * Fixed bug in spell check "change word" regarding "¿?" - thx locotus
   * Fix in "Fix common errors" regarding de-selected fixes - thx Tronar  
   * Fix for MPC-HC 32-bit - thx ZoneX